# Filter

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  LICENSE  README.en.md  README.md  config.h.in  test.cpp
src/: CMakeLists.txt
src/filter/: CMakeLists.txt
src/filter/include/: EnsembleKalmanFilter.h  FilterBase.h  KalmanFilter.h
src/filter/src/: FilterBase.cc  KalmanFilter.cc
src/filter/test/: CMakeLists.txt  TestEnsembleKalman.cc  TestEnsembleSin.cc  TestKalmanFilterWithFileIO.cc  kalman.txt
src/filter/test/test_data/: kalman_and_fileio_results.txt  test_kalman_filter_and_fileio.txt
src/io/: CMakeLists.txt
src/io/include/: DataVariant.h  ExcelIO.h  FileIO.h  FilterIO.h  InitState.h  MatFileIO.h  ModelIO.h  ReservoirFileIO.h  ResultsIO.h  RiverFileIO.h
src/io/src/: DataVariant.cc  ExcelIO.cc  FileIO.cc  FilterIO.cc  InitState.cc  MatFileIO.cc  ModelIO.cc  ReservoirFileIO.cc  RiverFileIO.cc
src/io/test/: CMakeLists.txt  ReadCellTest.cc  TestExcelIO.cc  TestFilterIO.cc  TestMatrixIO.cc  TestOpenXlsx.cc  TestRiverFileIO.cc  bai_river.txt  main.cc  matrix.txt
src/io/test/test_data/: filterio_read_test.txt  filterio_write_test.txt  test_matrix.txt
src/kalman/: KalmanFilter.cpp  KalmanFilter.h  filter_test  test  test.cpp
src/kalman/include/: EnsembleKalmanFilter.h  FilterBase.h  KalmanFilter.h
src/kalman/src/: KalmanFilter.cc
src/logger/: CMakeLists.txt
src/logger/include/: logger.h
src/logger/src/: logger.cc
src/logger/test/: LoggerTest.cc  test_logger.cc
src/model/: CMakeLists.txt  main.cc  start.py
src/model/optimization/: README.md
src/model/optimization/1DReservoirModel/: 1DReservoirModel_Optimize.py  GeatpyTest.py  MultiProcessingTest.py
src/model/output/: res_status.txt
src/model/scripts/: 0DReservoirModel.py  0DReservoirModelCalibrate.py  0DReservoirModelSensitivityExcute-02.py  0DReservoirModelSensitivitySample-01.py  0维水质模型的率定+验证.py  0维水质模型边界条件插值.py  0维水质模型预测.py  1DReservoirModel.py  1stOrderReactionParameterTracker.py  Interpolate.py  basic_reaction.py  model_tool.py  run_miyun_model.py  synthetic_data.py  track_basic_reaction_parameter.py  密云反硝化参数跟踪-框架分析-幅度影响.py  密云反硝化参数跟踪-框架分析-监测频率影响.py  密云反硝化参数跟踪-框架分析-观测误差影响.py  密云反硝化参数跟踪-框架分析.py  密云水库0维模型数据同化.py  边界条件和环境因子样条曲线插值.py
src/model/src/: 0DReservoirModel.cc  1DReservoirModel.cc  1stOrderReactionParameterTracker.cc  1stOrderReactionParameterTracker_default.cc  Model2dDegrade.cc  ModelIntegrate.cc  ModelReservoir.cc  Model_Degrade.cc  Test_Logger.cc  Validate.cc  velocity_tracker.cc  velocity_tracker_1d.cc
src/model/test/: TestArgs.cc
src/reactor/: CMakeLists.txt
src/reactor/include/: Ammonification.h  DataStructures.h  Denitrification.h  Nitrification.h  ParticleSettle.h  Reservoir.h  ReservoirSystem.h  River.h  RiverGroup.h  RiverSystem.h  Sediment.h  WaterColumn.h
src/reactor/src/: Ammonification.cc  DataStructures.cc  Denitrification.cc  Denitrification.cpp  Nitrification.cc  ParticleSettle.cc  Reservoir.cc  Reservoir.cpp  ReservoirSystem.cc  River.cc  River.cpp  RiverGroup.cc  RiverSystem.cc  Sediment.cc  WaterColumn.cc
src/reactor/test/: CMakeLists.txt  ReservoirSystemTest.cc  TestDataStructures.cc  TestDenitrification.cc  TestReservoir.cc  TestRiver.cc  TestRiverSystem.cc  WaterColumnTest.cc  bai_river.txt  testNitrification.cc
src/reactor/test/reservoir_test_data/: out_reservoir.txt  river1.txt
src/test/: data_gen.py  init_matrix.txt  test.cc
src/utils/: CMakeLists.txt  commands.h
src/utils/include/: logger.h  ode.h  umath.h
src/utils/src/: ode.cc  umath.cc
src/utils/test/: odeTest.cc  test_umath.cc  umathTest.cc
test/data/: 0DReservoirModel.xlsx  0DReservoirModelCalibrate+Validation.xlsx  0DReservoirModelCalibrate.xlsx  0维水质模型剔除异常值平均和样条曲线插值.xlsx  1-0维水质模型数据未插值.xlsx  1DReservoirModel_Origin.xlsx  1stMiyunParameterTracker.xlsx  1stMiyunParameterTracker_amplitude.xlsx  1stMiyunParameterTracker_default.xlsx  1stMiyunParameterTracker_error.xlsx  1stMiyunParameterTracker_frequency.xlsx  2-0维水质模型数据未插值+环境因子样条曲线插值+剔除异常值平均.xlsx  3-0维水质模型数据+环境因子样条曲线插值+剔除异常值平均+边界浓度插值.xlsx  4-0维水质模型数据Base.xlsx  5-0ResModel-Calibrate.xlsx  5-0ResModel-Validate.xlsx  6-0ResModel-Predict.xlsx  Degradation_in.xlsx  MiyunAssimilationModel.xlsx  Miyun_Model.xlsx  ModelIntegrate.xlsx  ReadCellTest_Data.xlsx  Synthetic_Modeling.xlsx  TemperatureAndDO.xlsx  filter_sin.txt  kalman_and_fileio_results.txt  sin.txt  test_kalman_filter_and_fileio.txt  velocity_tracker_in.xlsx
test/data/predict/: 6-0ResModel-Predict-2017.xlsx  6-0ResModel-Predict-2018.xlsx  6-0ResModel-Predict-2019.xlsx  6-0ResModel-Predict-2020.xlsx
test/scripts/: model_integrate_plot.py  test_ensembel_with_excel.py  test_ensemble_with_sin.py  test_kalman_filter.py  utils.py  velocity_tracker.py  velocity_tracker_1d.py  弦图绘制.py
test/src/: TestProcessBar.cc
