cmake_minimum_required(VERSION 3.26)
project("kalman-filter")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
# set( CMAKE_CXX_FLAGS "-std=c++11" )
set( CMAKE_BUILD_TYPE "Debug" )
include_directories(kalman)
include_directories(io/include)
include_directories(third_party/eigen)
aux_source_directory(kalman KALMAN)
aux_source_directory(io/src FILEIO)
aux_source_directory(test TEST)
add_library(kalman SHARED  ${KALMAN} ${FILEIO})
add_executable(test ${TEST})
target_link_libraries(test kalman)