message(STATUS "Entering logger")
project(logger)
message(STATUS "Entering spdlog")
set(SPDLOG_BUILD_SHARED ON)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/third_party/spdlog ${CMAKE_BINARY_DIR}/spdlog)
message(STATUS "Leave spdlog")

aux_source_directory(src LOGGER_SRC)
add_library(logger SHARED ${LOGGER_SRC})
target_include_directories(logger PUBLIC include ${CMAKE_SOURCE_DIR}/src/third_party/spdlog/include)
target_link_libraries(${PROJECT_NAME} PUBLIC spdlog)

if(${BUILD_TEST})
aux_source_directory(test TEST_SRC)
foreach(src_file ${TEST_SRC})
    get_filename_component(test_exe_name ${src_file} NAME_WE)
    add_executable(${test_exe_name} ${src_file})
    target_include_directories(${test_exe_name} PRIVATE include)
    target_link_libraries(${test_exe_name} PRIVATE ${PROJECT_NAME})
    add_test(NAME ${test_exe_name}
             COMMAND ${test_exe_name}
             WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
endforeach(src_file ${TEST_SRC})
endif()
message(STATUS "Leave logger")