cmake_minimum_required(VERSION 3.26)
project("filter-test")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # 生成compile_commands.json文件
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
# set( CMAKE_CXX_FLAGS "-std=c++11" )
set( CMAKE_BUILD_TYPE "Debug" )
include_directories(../include)
include_directories(../../io/include)
include_directories(../../third_party/eigen)

aux_source_directory(../src FILTER)
aux_source_directory(../../io/src FILEIO)
add_library(filter SHARED ${FILTER})
add_library(fileio SHARED ${FILEIO})
add_executable(TestKalmanFilter TestKalmanFilter.cc)
add_executable(TestKalmanFilterWithFileIO TestKalmanFilterWithFileIO.cc)
add_executable(TestEnsembleKalmanFilter TestEnsembleKalman.cc)
target_link_libraries(TestKalmanFilter filter fileio)
target_link_libraries(TestKalmanFilterWithFileIO filter fileio)
target_link_libraries(TestEnsembleKalmanFilter filter fileio)